--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <title>A Multiplayer Game</title>
   <style type="text/css">
     body {
-      margin: 0
+      margin: 0;
     }
     canvas {
       border: 2px solid gray;
     }
   </style>
-  <script src="//cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
   <script type="module" src="/static/game.js"></script>
 </head>
 
